# project-studblog

./: how to deploy.txt  how to run.txt
Backend/: pyproject.toml
Frontend/: package-lock.json  package.json  vite.config.js
Frontend/src/: App.svelte  app.css  main.js  output.css
Frontend/src/lib/: Layout.svelte
Frontend/src/lib/components/: Branding.svelte  Category.svelte  Footer.svelte  GlassyStars.svelte  LegalModal.svelte  Navbar.svelte  PostCard.svelte  PostCardSmall.svelte  PostLayout.svelte  Promo.svelte
Frontend/src/routes/: About.svelte  Guidelines.svelte  Main.svelte  ReadPage.svelte  TopBlogs.svelte
Frontend/src/routes/User/: Account.svelte  Later.svelte  Likes.svelte  Login.svelte  Management.svelte  Posts.svelte
New folder/src/: App.svelte
New folder/src/lib/: api.js  store.js
New folder/src/lib/components/: Branding.svelte  GlassyStars.svelte  LegalModal.svelte  PostCard.svelte  Promo.svelte
New folder/src/routes/: Main.svelte
New folder/src/routes/User/: Account.svelte  Later.svelte  Login.svelte  Posts.svelte
New folder/src/routes/User/Management/: Management.svelte
backend/: wsgi.py
backend/src/: __init__.py  database.py  routes.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.js  store.js  utils.js
frontend/src/lib/components/: Category.svelte  Footer.svelte  Navbar.svelte  PostCard.svelte  PostCardSmall.svelte
frontend/src/routes/: 404.svelte  Main.svelte  ReadPage.svelte  layout.svelte
frontend/src/routes/User/: AdminPanel.svelte
nginx/conf/: nginx.conf
