[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.4.4",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-cockroachdb>=0.4.4",
    "waitress>=3.0.2",
]
